# RankForge

./: .env.example  .gitignore  .pre-commit-config.yaml  MASTER_PLAN.md  README.md  alembic.ini  club_match_csv_template.csv  output.txt  pyproject.toml  pytest.ini  rankforge.db
src/alembic/: env.py
src/alembic/versions/: 20251220_add_is_anonymous_to_players.py  20251220_add_timestamps_indexes_versioning.py  20251222_add_dupr_upload_tracking.py  67205d1019b0_create_initial_database_tables.py
src/rankforge/: exceptions.py  main.py
src/rankforge/api/: game.py  match.py  player.py
src/rankforge/db/: models.py  session.py
src/rankforge/middleware/: __init__.py  logging.py
src/rankforge/rating/: dummy_engine.py  glicko2_engine.py
src/rankforge/schemas/: __init__.py  common.py  game.py  game_profile.py  leaderboard.py  match.py  pagination.py  player.py  player_stats.py
src/rankforge/services/: match_service.py
tests/: conftest.py  test_api.py  test_api_errors.py  test_api_games.py  test_api_matches.py  test_api_pagination.py  test_api_players.py  test_concurrent_operations.py  test_db_models.py  test_glicko2_edge_cases.py  test_match_validation.py  test_rating_engine.py  test_services.py  test_transaction_rollback.py
